--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
           <type>pom</type>
           <scope>import</scope>
         </dependency>
+        <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-core</artifactId>
+          <version>1.3.15</version>
+          <scope>test</scope>
+        </dependency>
       </dependencies>
     </dependencyManagement>
 
@@ -95,6 +101,12 @@
             <groupId>org.sonarsource.java</groupId>
             <artifactId>sonar-java-plugin</artifactId>
             <version>${sonar.java.version}</version>
+            <exclusions>
+                 <exclusion>
+                     <groupId>org.apache.tomcat.embed</groupId>
+                     <artifactId>*</artifactId>
+               </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.sonarsource.python</groupId>
